--- a/p2-landing-page/index.html
+++ b/p2-landing-page/index.html
@@ -95,7 +95,7 @@
     </section>
   </main>
   <footer class="page_footer">
-    <p>&copy Udacity</p>
+    <p>&copy 2020 Copyright Legal & Privacy</p>
   </footer>
 
   <script src="./js/app.js"></script>
