--- a/p3-weather-journal-app/weathar-app-client/index.html
+++ b/p3-weather-journal-app/weathar-app-client/index.html
@@ -18,14 +18,14 @@
       <input type="text" id="zip" placeholder="Enter zip code here">
     </div>
     <div class="holder feel">
-      <label for="feelings">How are you feeling today?</label>
-      <textarea class="myInput" id="feelings" placeholder="Enter your feelings here" rows="9" cols="50"></textarea>
+      <label for="feelings"> your's feeling today?</label>
+      <textarea class="myInput" id="feelings" placeholder="your feelings here" rows="6" cols="40"></textarea>
     </div>
     <div class="holder generate-button">
-      <button id="generate" type="submit"> Generate </button>
+      <button id="generate" type="submit"> Add </button>
     </div>
     <div class="holder entry">
-      <div class="title">Most Recent Entry</div>
+      <div class="title">Recent Entry</div>
       <div id="entryHolder">
         <div id="date"></div>
         <div id="temp"></div>
